--- a/src/components/recipedetails.module.css
+++ b/src/components/recipedetails.module.css
@@ -13,9 +13,12 @@
 }
 
 .recipeImage {
+  display: block;
   max-width: 100%;
   height: auto;
   border-radius: 8px;
+  margin-left: auto;
+  margin-right: auto;
   margin-bottom: 1.25rem;
 }
 
